// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatPalette > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <div data-slot="content" class=""></div>
  <!--v-if-->
</section>"
`;

exports[`ChatPalette > renders with class correctly 1`] = `
"<div data-slot="root" class="absolute">
  <div data-slot="content" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`ChatPalette > renders with default slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="content" class="">Default slot</div>
  <!--v-if-->
</div>"
`;

exports[`ChatPalette > renders with prompt slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="content" class=""></div>Prompt slot
</div>"
`;

exports[`ChatPalette > renders with ui correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="content" class=""></div>
  <!--v-if-->
</div>"
`;
